tests/unit/language/errors/copy_param_array_rejected.arche
// `copy` duplicates a local fixed-size array `T[N]` (any element type). Copying a forwarded array
// *parameter* — whose backing is not a statically sized local `T[N]` here — is a clear compile
// error rather than a silent no-copy. See docs/ownership_design_decisions.md.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "only a local fixed-size array" %t.out
consume :: func(own b: char[]) -> char[] {
  b[0] = 'X';
  return b;
}
relay :: func(b: char[]) -> int {
  other := consume(copy b);
  return 0;
}

main :: proc() {
  buf: char[8];
  relay(buf);
}
